--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <title>Download Recept Samuël</title>
-<body>
-<button type="button"> <img src="https://bit.ly/3BF9FD7" height ="80" width="100" /></button>
-</body> 
+<form action="https://uc9465eabef30941b195ab027698.dl.dropboxusercontent.com/cd/0/get/BeCY7PfTEN9kZfqnYlVbYJBtCwAlLVCWslbTGDkA4LTHTYCGSH0dpKubEMqREpx4uwKU9KNa7s_X2P_91NzrpslukceyQTHBTWhmlqzEI6b1WawZZy1IcbLigJNNxP86FMS_k6L9n6CzSVHxnoJrXOjQ/file#">
+    <input type="submit" value="Download Recept Samuël" />
+</form>
