--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <title>Download Recept Samuël</title>
-<form action="https://uc8174aec4caa7ba935fe6e75623.dl.dropboxusercontent.com/cd/0/get/BeCKeGVPSw6Yk0GCCYjw2wK0-TvFsZYaJTQKX1iptXB5Q7TUVEnOwexez8ibnhnD_W3FbRkZDj7xEXbcuKMdoZTmXDOxKcwfZpeGeXHuIB-q2ikNbB6BmqP3kbizblciTM0BbKLCRVjH5FfvAGZo9zOT/file#">
-    <input type="submit" value="Download Recept Samuël" />
+<form method="get" action="Recept Samuël.docx">
+   <button type="submit">Download Recept Samuël</button>
 </form>
